null overflow in square styling fixed with float

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -20,10 +21,17 @@ button {
 }
 
 .squareBtn {
+  float: left;
+  padding: 0px;
+  margin: 0px;
   border: 1px solid gray;
   background: black;
   color: greenyellow;
-  width: 30px;
-  height: 30px;
+  width: 36px;
+  height: 36px;
   line-height: 30px;
+}
+
+.row{
+  height: 36px;
 }
